* The UserGroupMembershipParam class, deprecated in 1.43, has been removed.
* The ParamType::OBJECT constant, deprecated in 1.43, has been removed.
* The MediaWiki\Message\Converter class, deprecated in 1.43, has been removed.
  Use MessageValue::newFromSpecifier or Message::newFromSpecifier
  instead (T358779).
* The ParsoidOutputAccess class marked @unstable from creation and
  deprecated with all of its methods in 1.43, has been removed.
* …

=== Deprecations in 1.44 ===

* PageUpdater::setUsePageCreationLog() is deprecated and emitting warnings.
  Use setFlags( EDIT_SUPPRESS_RC ) instead.
* ...

=== Other changes in 1.44 ===
* …

== Compatibility ==

MediaWiki 1.44 requires PHP 8.1.0 or later and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* intl
* json
* mbstring
* xml

MariaDB is the recommended database software. MySQL, PostgreSQL, or SQLite can
be used instead, but support for them is somewhat less mature.

The supported versions are:

* MariaDB 10.3 or higher
* MySQL 5.7.0 or higher
* PostgreSQL 10 or later
* SQLite 3.8.0 or later

== Online documentation ==
Documentation for both end-users and site administrators is available on
MediaWiki.org, and is covered under the GNU Free Documentation License (except
for pages that explicitly state that their contents are in the public domain):

  <https://www.mediawiki.org/wiki/Special:MyLanguage/Documentation>

== Mailing list ==
A mailing list is available for MediaWiki user support and discussion:

  <https://lists.wikimedia.org/postorius/lists/mediawiki-l.lists.wikimedia.org/>

A low-traffic announcements-only list is also available:

  <https://lists.wikimedia.org/postorius/lists/mediawiki-announce.lists.wikimedia.org/>

It's highly recommended that you sign up for one of these lists if you're
going to run a public MediaWiki, so you can be notified of security fixes.

== IRC help ==
There's usually someone online in #mediawiki on irc.libera.chat.